se crea el archivo de descarga para user roles
